src/test/deca/codegen/valid/created/Objet/SelectionInIf.deca
// Description:
//  Division par une Selection nulle
// Resultats:
//  ok

class A{
    boolean m(){
        return true;
    }
}
{
    A newA = new A();
    if(newA.m()){
        println("ok");
    }
}